--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 apScheduler
 pynput
 PySide6-Fluent-Widgets==1.5.4
-pyside6==6.5.2
 tendo
+PySide6==6.4.2 
+PySide6-Addons==6.4.2
+PySide6-Essentials==6.4.2
